--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,60 @@
+# Python
 __pycache__/
-*.pyc
-*.pyo
-*.pyd
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Virtual Environment
+venv/
+ENV/
+env/
+myenv/
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Environment variables
 .env
+.env.*
+
+# Logs
+logs/
+*.log
+
+# Database
+*.sqlite3
+*.db
+
+# Static files
+static/
+
+# Generated files
+__pycache__/
+.pytest_cache/
+.coverage
+htmlcov/
+coverage.xml
+.tox/
+
+# OS
+.DS_Store
+Thumbs.db
